[project]
name = "trl-snflk"
version = "0.1.0"
description = "Test project for snowflake course"
authors = [
    {name = "testacct-knx",email = "gcpacguser@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "snowflake-snowpark-python (>=1.32.0,<2.0.0)",
    "streamlit (>=1.45.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false
